k8s/eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: ecomregistry6821.azurecr.io/service-discovery:latest
          ports:
            - containerPort: 8761

---
apiVersion: v1
kind: Service
metadata:
  name: eureka
spec:
  type: NodePort
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
      nodePort: 32061
