k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: ecomregistry6821.azurecr.io/product-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
