k8s/recommendation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation-service
  template:
    metadata:
      labels:
        app: recommendation-service
    spec:
      containers:
        - name: recommendation-service
          image: ecomregistry6821.azurecr.io/recommendation-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: recommendation-service
spec:
  selector:
    app: recommendation-service
  ports:
    - port: 8087
      targetPort: 8087
  type: ClusterIP
